--- a/bibs/paper.bib
+++ b/bibs/paper.bib
@@ -40,6 +40,77 @@
   year={2004}
 }
 
+@inproceedings {geode-vulimiri,
+author = {Ashish Vulimiri and Carlo Curino and P. Brighten Godfrey and Thomas Jungblut and Jitu Padhye and George Varghese},
+title = {Global Analytics in the Face of Bandwidth and Regulatory Constraints},
+booktitle = {12th USENIX Symposium on Networked Systems Design and Implementation (NSDI 15)},
+year = {2015},
+month = May,
+isbn = {978-1-931971-218},
+address = {Oakland, CA},
+pages = {323--336},
+url = {https://www.usenix.org/conference/nsdi15/technical-sessions/presentation/vulimiri},
+publisher = {USENIX Association},
+}
+
+@inproceedings{swag-hung,
+ author = {Hung, Chien-Chun and Golubchik, Leana and Yu, Minlan},
+ title = {Scheduling Jobs Across Geo-distributed Datacenters},
+ booktitle = {Proceedings of the Sixth ACM Symposium on Cloud Computing},
+ series = {SoCC '15},
+ year = {2015},
+ isbn = {978-1-4503-3651-2},
+ location = {Kohala Coast, Hawaii},
+ pages = {111--124},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/2806777.2806780},
+ doi = {10.1145/2806777.2806780},
+ acmid = {2806780},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+
+@inproceedings{iridium-pu,
+ author = {Pu, Qifan and Ananthanarayanan, Ganesh and Bodik, Peter and Kandula, Srikanth and Akella, Aditya and Bahl, Paramvir and Stoica, Ion},
+ title = {Low Latency Geo-distributed Data Analytics},
+ booktitle = {Proceedings of the 2015 ACM Conference on Special Interest Group on Data Communication},
+ series = {SIGCOMM '15},
+ year = {2015},
+ isbn = {978-1-4503-3542-3},
+ location = {London, United Kingdom},
+ pages = {421--434},
+ numpages = {14},
+ url = {http://doi.acm.org/10.1145/2785956.2787505},
+ doi = {10.1145/2785956.2787505},
+ acmid = {2787505},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {data analytics, geo-distributed, low latency, network aware, wan analytics},
+} 
+
+
+@article{spanner-corbett,
+ author = {Corbett, James C. and Dean, Jeffrey and Epstein, Michael and Fikes, Andrew and Frost, Christopher and Furman, J. J. and Ghemawat, Sanjay and Gubarev, Andrey and Heiser, Christopher and Hochschild, Peter and Hsieh, Wilson and Kanthak, Sebastian and Kogan, Eugene and Li, Hongyi and Lloyd, Alexander and Melnik, Sergey and Mwaura, David and Nagle, David and Quinlan, Sean and Rao, Rajesh and Rolig, Lindsay and Saito, Yasushi and Szymaniak, Michal and Taylor, Christopher and Wang, Ruth and Woodford, Dale},
+ title = {Spanner: Google\&Rsquo;s Globally Distributed Database},
+ journal = {ACM Trans. Comput. Syst.},
+ issue_date = {August 2013},
+ volume = {31},
+ number = {3},
+ month = aug,
+ year = {2013},
+ issn = {0734-2071},
+ pages = {8:1--8:22},
+ articleno = {8},
+ numpages = {22},
+ url = {http://doi.acm.org/10.1145/2491245},
+ doi = {10.1145/2491245},
+ acmid = {2491245},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Distributed databases, concurrency control, replication, time management, transactions},
+} 
+
 @inproceedings{Lloyd:2011:DSE:2043556.2043593,
  author = {Lloyd, Wyatt and Freedman, Michael J. and Kaminsky, Michael and Andersen, David G.},
  title = {{Don't Settle for Eventual: Scalable Causal Consistency for Wide-area Storage with COPS}},
