Updates to rwg_testing (and makefile fixes)

--- a/bibs/paper.bib
+++ b/bibs/paper.bib
@@ -10,6 +10,16 @@
   year={1985},
   publisher={ACM}
 }
+i
+@article{floyd1967assigning,
+  title={Assigning meanings to programs},
+  author={Floyd, Robert W},
+  journal={Mathematical aspects of computer science},
+  volume={19},
+  number={19-32},
+  pages={1},
+  year={1967}
+}
 
 @inproceedings{hawblitzel2015ironfleet,
   title={{IronFleet: Proving Practical Distributed Systems Correct}},
