--- a/texfiles/rwg_geo.tex
+++ b/texfiles/rwg_geo.tex
@@ -2,4 +2,4 @@
 \section{Analyzing Geo-distributed Datasets}
 It is our belief that geo-distribution of cloud data will continue to be a major difficulty for big data systems. These difficulties can be reduced to scheduling problems: how do we schedule resources and place data to satisfy latency requirements and balance processing on less costly or loaded data centers? Furthermore, even once this problem is conceptualized as a set of constraints, how easy is it to solve these constraints? Do we need approximate solutions, and how well will they work?
 
-Secondly, we argue that the problem of geodistribution is really a special case (multiple locations under single domain of control) of the more general problem of data management and analysis across multiple datacenters with multiple domains of control. When there are multiple domains of control, additional constraints must be enforced due to legal or organizational barriers which prevent data from moving. The same basic questions arise in this situation, but there are new ones, including concerns about data privacy and security. When is it safe to share analysis results or share processing? How can one domain trust the analysis of another?
+Secondly, we argue that the problem of geo-distribution is really a special case (multiple locations under single domain of control) of the more general problem of data management and analysis across multiple datacenters with multiple domains of control. When there are multiple domains of control, additional constraints must be enforced due to legal or organizational barriers which prevent data from moving. The same basic questions arise in this situation, but there are new ones, including concerns about data privacy and security. When is it safe to share analysis results or share processing? How can one domain trust the analysis of another?
